# EACopy

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  VCPKG_REGISTRY.md  vcpkg-configuration.json  vcpkg.json
.github/scripts/: make-scripts-executable.sh  prepare-vcpkg-package.ps1  update-vcpkg-registry.sh
.github/workflows/: build.yml  ci.yml  release.yml  vcpkg-registry.yml
cmake/: EACopyConfig.cmake.in
include/: EACopyDependencies.h  EACopyNetwork.h  EACopyShared.h
performance_history/: performance_20250511_204033.json
ports/eacopy/: portfile.cmake  usage  vcpkg.json
scripts/: README.md  build.bat  generate_performance_trends.ps1  install_vcpkg.bat  performance_test.ps1  post_performance_results.ps1  test-x86-build.bat
source/: EACopyDeltaXDelta.h  EACopyDeltaZstd.h  EACopyDependencies.h  EACopyNetwork.cpp  EACopyShared.cpp
test/: CMakeLists.txt
test-vcpkg-registry/: CMakeLists.txt  main.cpp  vcpkg-configuration.json  vcpkg.json
vcpkg-ports/xdelta3/: CMakeLists.txt  vcpkg.json
vcpkg-ports/xdelta3/cmake/: xdelta3-config.cmake.in
vcpkg-registry/ports/eacopy/: usage  vcpkg.json
vcpkg-registry/versions/: baseline.json
vcpkg-registry/versions/e-/: eacopy.json
versions/e-/: eacopy.json
